--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -34,7 +34,7 @@
                     display: inline-block;
                     width: 250px;
                     height: 1px;
-                    background-color: $blue;
+                    background-color: $blueDeep;
                     margin-left: 20px;
                 }
             }
@@ -45,7 +45,7 @@
         a {
             margin: 0;
             padding: 0;
-            color: $blue;
+            color: $blueDeep;
             font-family: Montserrat;
             font-style: normal;
             font-weight: normal;
