--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -150,10 +150,12 @@
     align-items: flex-end;
     white-space: nowrap;
     margin-right: 40px;
+    width: max-content;
     &::after {
         content: "";
+        position: absolute;
         bottom: 0;
-        right: 0;
+        left: 101%;
         width: 100vw;
         height: 1px;
         border-bottom: 1px solid $blueClass;
