--- a/GT/css/bootstrap/bootstrap-reboot.css
+++ b/GT/css/bootstrap/bootstrap-reboot.css
@@ -16,7 +16,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(37, 39, 43, 0);
+  -webkit-tap-highlight-color: rgba(79, 79, 79, 0);
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -124,13 +124,13 @@ sup {
 }
 
 a {
-  color: #25272B;
+  color: #4F4F4F;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #25272B;
+  color: #4F4F4F;
   text-decoration: none;
 }
 
