--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -47,7 +47,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(37, 39, 43, 0);
+  -webkit-tap-highlight-color: rgba(79, 79, 79, 0);
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -155,13 +155,13 @@ sup {
 }
 
 a {
-  color: #25272B;
+  color: #4F4F4F;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #25272B;
+  color: #4F4F4F;
   text-decoration: none;
 }
 
@@ -420,7 +420,7 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 1px solid rgba(37, 39, 43, 0.1);
+  border-top: 1px solid rgba(79, 79, 79, 0.1);
 }
 
 small,
@@ -4165,18 +4165,18 @@ button.bg-dark:focus {
 }
 
 .shadow-sm {
-  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(37, 39, 43, 0.075) !important;
-          box-shadow: 0 0.125rem 0.25rem rgba(37, 39, 43, 0.075) !important;
+  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(79, 79, 79, 0.075) !important;
+          box-shadow: 0 0.125rem 0.25rem rgba(79, 79, 79, 0.075) !important;
 }
 
 .shadow {
-  -webkit-box-shadow: 0 0.5rem 1rem rgba(37, 39, 43, 0.15) !important;
-          box-shadow: 0 0.5rem 1rem rgba(37, 39, 43, 0.15) !important;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(79, 79, 79, 0.15) !important;
+          box-shadow: 0 0.5rem 1rem rgba(79, 79, 79, 0.15) !important;
 }
 
 .shadow-lg {
-  -webkit-box-shadow: 0 1rem 3rem rgba(37, 39, 43, 0.175) !important;
-          box-shadow: 0 1rem 3rem rgba(37, 39, 43, 0.175) !important;
+  -webkit-box-shadow: 0 1rem 3rem rgba(79, 79, 79, 0.175) !important;
+          box-shadow: 0 1rem 3rem rgba(79, 79, 79, 0.175) !important;
 }
 
 .shadow-none {
@@ -6267,7 +6267,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-black-50 {
-  color: rgba(37, 39, 43, 0.5) !important;
+  color: rgba(79, 79, 79, 0.5) !important;
 }
 
 .text-white-50 {
@@ -6549,8 +6549,42 @@ h2,
   }
 }
 
+.btn3 {
+  color: initial;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+  color: #828282;
+  margin: 0;
+  padding: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  display: inline-block;
+}
+
+.btn3::after {
+  content: url(../img/arrowBtn.svg);
+  margin-left: 15px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn3:hover::after {
+  margin-left: 25px;
+  display: inline-block;
+}
+
 .ttu {
   text-transform: uppercase;
+}
+
+.mp {
+  margin: 0;
+  padding: 0;
 }
 
 li {
@@ -6565,6 +6599,11 @@ body {
 
 a {
   text-decoration: none;
+}
+
+a,
+button {
+  outline: none;
 }
 
 .header {
@@ -6858,6 +6897,7 @@ a {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  z-index: 10;
 }
 
 .titleSection::after {
@@ -7000,7 +7040,7 @@ a {
 
 .sliderSecvices__text {
   width: 560px;
-  color: #25272B;
+  color: #4F4F4F;
 }
 
 .sliderSecvices__numWrap {
@@ -7098,6 +7138,107 @@ a {
           transform: translateX(50%);
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+
+.map {
+  background: radial-gradient(127.3% 98.9% at 50.98% 1.1%, #363C44 0%, #0F141B 100%);
+  overflow: hidden;
+}
+
+@media (max-width: 767.98px) {
+  .map__map {
+    display: none;
+  }
+}
+
+.map__svg {
+  max-height: 120vh;
+  /* margin-left: -20vw; */
+  margin-top: -70vh;
+}
+
+@media (max-width: 1399.98px) {
+  .map__svg {
+    margin-left: -20vw;
+  }
+}
+
+@media (max-width: 1024.98px) {
+  .map__svg {
+    margin-left: -50vw;
+  }
+}
+
+.map__point {
+  cursor: pointer;
+}
+
+.map__point ellipse:first-child {
+  rx: 10;
+  ry: 10;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.map__point ellipse:last-child {
+  rx: 4;
+  ry: 4;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.map__point:hover ellipse:first-child {
+  rx: 20;
+  ry: 20;
+}
+
+.map__point.active ellipse:last-child {
+  rx: 10;
+  ry: 10;
+}
+
+.map__detailsInner {
+  padding: 40px 40px 40px 160px;
+  background-color: rgba(44, 47, 55, 0.2);
+  display: inline-block;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-bottom: 1px solid #1E7FCA;
+}
+
+.ticker__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.ticker__img {
+  margin-right: 200px;
+}
+
+.tippy-box[data-theme~='gt'] {
+  background-color: rgba(130, 130, 130, 0.2);
+  color: #828282;
+  border-radius: 0;
+}
+
+.footerMap {
+  width: 100%;
+  height: 600px;
+}
+
+.contacts {
+  position: relative;
+  z-index: 1;
+  margin-bottom: -130px;
+}
+
+.contacts__inner {
+  background-color: #f2f2f2;
+}
+
+.contacts__link {
+  display: block;
 }
 
 .anim .firstSection::after {
