--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -11,6 +11,9 @@
         height: 100%;
         width: 16.6666%;
         background-color: $bgWhite;
+        @include media-breakpoint-down(md) {
+            width: 13.6666%;
+        }
     }
     &__inner {
         width: 100%;
@@ -21,6 +24,9 @@
         & .row:first-child {
             flex-grow: 1;
         }
+        @include media-breakpoint-down(sm) {
+            padding: 70px 0;
+        }
     }
     &__nameWrap {
         position: relative;
@@ -29,6 +35,7 @@
         z-index: 2;
         position: relative;
         text-transform: uppercase;
+        line-height: 1;
         & span {
             color: $blueClass;
         }
@@ -42,20 +49,40 @@
         background: rgba(0, 107, 168, 0.31);
         backdrop-filter: blur(4px);
         z-index: 1;
+        @include media-breakpoint-down(lg) {
+            right: 340px;
+            bottom: 16px;
+        }
+        @include media-breakpoint-down(md) {
+            right: 340px;
+            bottom: 13px;
+        }
+        @include media-breakpoint-down(sm) {
+            right: 50%;
+        }
     }
     &__content {
         width: 720px;
         margin-top: auto;
+        @include media-breakpoint-down(md) {
+            width: 560px;
+        }
     }
     &__slogan {
         display: flex;
         align-items: start;
     }
     &__sloganText {
-        width: 400px;
+        width: 70%;
         margin-left: 40px;
         position: relative;
         top: -7px;
+        @include media-breakpoint-down(md) {
+            // margin-left: 20px;
+        }
+        @include media-breakpoint-down(md) {
+            // margin-left: 20px;
+        }
     }
     &__sloganLine {
         flex-grow: 1;
@@ -65,7 +92,7 @@
 
 .btnNext {
     position: absolute;
-    bottom: -60px;
+    bottom: -100px;
     right: calc(50% - 110px);
     // border: 1px solid $white;
     border-radius: 50%;
@@ -129,6 +156,9 @@
     &_dark &__circle {
         stroke: $blueDeep;
     }
+    @include media-breakpoint-down(lg) {
+        transform: scale(0.6);
+    }
     @include media-breakpoint-down(md) {
         display: none;
     }
@@ -152,6 +182,7 @@
     margin-right: 40px;
     width: max-content;
     z-index: 10;
+    color: $gray;
     &::after {
         content: "";
         position: absolute;
@@ -168,6 +199,12 @@
 
 .sectionAbout {
     color: $dark;
+    &__img2 {
+        margin-top: -100px;
+        @include media-breakpoint-down(lg) {
+            margin-top: -50px;
+        }
+    }
 }
 
 .numCompany {
@@ -202,10 +239,14 @@
 
 .sliderSecvices {
     display: flex;
-    margin-bottom: 450px;
+    margin-bottom: 350px;
     align-items: flex-end;
     justify-content: flex-end;
     height: 500px;
+    @include media-breakpoint-down(sm) {
+        height: 300px;
+        margin-bottom: 450px;
+    }
     &__item {
         cursor: pointer;
         height: 100%;
@@ -234,6 +275,9 @@
         bottom: 40px;
         left: 100px;
         width: 560px;
+        @include media-breakpoint-down(md) {
+            left: 40px;
+        }
     }
     &__textInner {
         // white-space: nowrap;
@@ -246,22 +290,31 @@
         transition: 1s;
     }
     &__title {
-        width: 560px;
+        width: 100%;
+        max-width: 560px;
         transform: translateX(30%);
         transition: 1s;
+        white-space: nowrap;
+        @include media-breakpoint-down(sm) {
+            white-space: normal;
+            max-width: 70vw;
+        }
     }
     &__textWrap {
         transform: translateY(20px);
         opacity: 0;
         transition: 1s;
         position: absolute;
-        bottom: -120px;
-        overflow: hidden;
+        bottom: -270px;
+        // overflow: hidden;
         width: 100%;
-        height: 100%;
+        height: 200px;
+        @include media-breakpoint-down(sm) {
+            max-width: 70vw;
+        }
     }
     &__text {
-        width: 560px;
+        width: 100%;
         color: $black;
     }
     &__numWrap {
@@ -271,6 +324,9 @@
         overflow: hidden;
         width: 0;
         transition: 0.5s;
+        @include media-breakpoint-down(md) {
+            width: 105px;
+        }
     }
     &__num {
         line-height: 100%;
@@ -279,6 +335,9 @@
         color: rgba( $gray, 0.43);
         transform: translateX(50%);
         transition: 0.5s;
+        @include media-breakpoint-down(md) {
+            // width: 105px;
+        }
     }
     &__numSmWrap {
         position: absolute;
@@ -288,6 +347,9 @@
         width: 35px;
         transition: 0.3s;
         // transition-delay: 0.5s;
+        @include media-breakpoint-down(md) {
+            left: -25px;
+        }
     }
     &__numSm {
         transform: translateX(0);
@@ -425,5 +487,48 @@
     }
     &__link {
         display: block;
+        white-space: nowrap;
+    }
+}
+
+.seaBig {
+    position: relative;
+    &__logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 66%;
+    }
+}
+
+.licenses {
+    background: radial-gradient(127.3% 98.9% at 50.98% 1.1%, #363C44 0%, #0F141B 100%);
+    color: $dark;
+    &__img {
+        padding: 10px;
+        width: 100%;
+        height: auto;
+        &_h {
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+.projectHead {
+    color: $gray;
+}
+
+.partners {
+    color: $black;
+    &__line {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    &__item {
+        margin: 0 25px;
     }
 }
