--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -532,3 +532,73 @@
         margin: 0 25px;
     }
 }
+
+.projectBody {
+    background: radial-gradient(127.3% 98.9% at 50.98% 1.1%, #363C44 0%, #0F141B 100%);
+    color: $white;
+}
+
+.sliderP {
+    &__item {
+        position: relative;
+        margin-bottom: 100px;
+    }
+    &__bg {
+        opacity: 0.2;
+        width: 80%;
+        margin-left: 20%;
+        img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+    }
+    &__content {
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        opacity: 0;
+    }
+    &__contentWrap {
+        position: relative;
+    }
+    &__img {
+        opacity: 0;
+    }
+    &__textWrap {
+        position: absolute;
+        top: 60%;
+        left: 20%;
+        width: 80%;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 0px 80px;
+        height: 0;
+        // height: 400px;
+        transition: 1s;
+        /* height: 0; */
+        overflow: hidden;
+    }
+    &__text {
+        display: flex;
+        margin-top: 40px;
+        margin-bottom: 60px;
+        margin-right: 50px;
+        p {
+            margin-right: 50px;
+            max-width: 45%;
+        }
+    }
+    &__line {
+        margin-top: 8px;
+        width: 50px;
+        min-width: 50px;
+        margin-right: 20px;
+        height: 1px;
+        background-color: $white;
+    }
+    .active &__content {
+        opacity: 1;
+    }
+}
