--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -7431,6 +7431,87 @@ button {
   margin: 0 25px;
 }
 
+.projectBody {
+  background: radial-gradient(127.3% 98.9% at 50.98% 1.1%, #363C44 0%, #0F141B 100%);
+  color: #f2f2f2;
+}
+
+.sliderP__item {
+  position: relative;
+  margin-bottom: 100px;
+}
+
+.sliderP__bg {
+  opacity: 0.2;
+  width: 80%;
+  margin-left: 20%;
+}
+
+.sliderP__bg img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.sliderP__content {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+}
+
+.sliderP__contentWrap {
+  position: relative;
+}
+
+.sliderP__img {
+  opacity: 0;
+}
+
+.sliderP__textWrap {
+  position: absolute;
+  top: 60%;
+  left: 20%;
+  width: 80%;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 0px 80px;
+  height: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+  /* height: 0; */
+  overflow: hidden;
+}
+
+.sliderP__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  margin-right: 50px;
+}
+
+.sliderP__text p {
+  margin-right: 50px;
+  max-width: 45%;
+}
+
+.sliderP__line {
+  margin-top: 8px;
+  width: 50px;
+  min-width: 50px;
+  margin-right: 20px;
+  height: 1px;
+  background-color: #f2f2f2;
+}
+
+.active .sliderP__content {
+  opacity: 1;
+}
+
 .anim .firstSection::after {
   content: "";
   position: absolute;
