--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -500,6 +500,11 @@
         transform: translate(-50%, -50%);
         max-width: 66%;
     }
+    &__video {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+    }
 }
 
 .licenses {
@@ -542,6 +547,8 @@
     &__item {
         position: relative;
         margin-bottom: 100px;
+        transition: 0.5s;
+        height: 300px;
     }
     &__bg {
         opacity: 0.2;
@@ -566,19 +573,29 @@
     }
     &__img {
         opacity: 0;
+        img {
+            width: 100%;
+        }
     }
     &__textWrap {
         position: absolute;
         top: 60%;
         left: 20%;
         width: 80%;
+        height: 400px;
+        transform: translate(100%);
         background: rgba(0, 0, 0, 0.6);
         padding: 0px 80px;
-        height: 0;
+        // height: 0;
         // height: 400px;
         transition: 1s;
         /* height: 0; */
         overflow: hidden;
+        @include media-breakpoint-down(lg) {
+            top: 40%;
+            left: 10%;
+            width: 90%;
+        }
     }
     &__text {
         display: flex;
@@ -600,5 +617,8 @@
     }
     .active &__content {
         opacity: 1;
+    }
+    &__item.active {
+        height: 80vh;
     }
 }
