--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -7389,6 +7389,13 @@ button {
   max-width: 66%;
 }
 
+.seaBig__video {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .licenses {
   background: radial-gradient(127.3% 98.9% at 50.98% 1.1%, #363C44 0%, #0F141B 100%);
   color: #4F4F4F;
@@ -7439,6 +7446,9 @@ button {
 .sliderP__item {
   position: relative;
   margin-bottom: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  height: 300px;
 }
 
 .sliderP__bg {
@@ -7471,18 +7481,32 @@ button {
   opacity: 0;
 }
 
+.sliderP__img img {
+  width: 100%;
+}
+
 .sliderP__textWrap {
   position: absolute;
   top: 60%;
   left: 20%;
   width: 80%;
+  height: 400px;
+  -webkit-transform: translate(100%);
+          transform: translate(100%);
   background: rgba(0, 0, 0, 0.6);
   padding: 0px 80px;
-  height: 0;
   -webkit-transition: 1s;
   transition: 1s;
   /* height: 0; */
   overflow: hidden;
+}
+
+@media (max-width: 1399.98px) {
+  .sliderP__textWrap {
+    top: 40%;
+    left: 10%;
+    width: 90%;
+  }
 }
 
 .sliderP__text {
@@ -7510,6 +7534,10 @@ button {
 
 .active .sliderP__content {
   opacity: 1;
+}
+
+.sliderP__item.active {
+  height: 80vh;
 }
 
 .anim .firstSection::after {
